--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'org.jsoup:jsoup:1.12.1'
+    implementation 'me.samlss:broccoli:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
