--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'me.samlss:broccoli:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
