--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
